--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bienvenido</h1>
+    <h1 class="display-4">Bienvenido!</h1>
     <p>Proyecto Devops Bertoni Solutions <a href="https://appjcrvial.azurewebsites.net/"></a>.</p>
 </div>
