--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Bienvenido!</h1>
-    <p>Proyecto .NET Core Devops- Bertoni Solutions <a href="https://appjcrvial.azurewebsites.net/"></a>.</p>
+    <p>Proyecto .NET Core Devops- Bertoni Solutions. <a href="https://appjcrvial.azurewebsites.net/"></a>.</p>
 </div>
